# Prelim-code-for-OAC

./: Generating_nc_files.py  README.md  aviation_emissions_data.csv  comp_weighted_unweighted.ipynb  csv_to_ncdf.py  csv_to_oac.ipynb  csv_to_oac_all_spc.ipynb  gen_toml.py  import_csv.py  plot_maps.py  plot_single_coord.py  plotting_maps.ipynb  prelim_am.py  print('hello world').py  pyproject.toml  runncdf.py  test_maps.ipynb  test_plotting_weighted_emissions  time_norm_tests.ipynb
Inventories/: rnd_inv_2020.nc
inputs/: test_time_norm.nc
map_plotting/: plot_single_coord.py
pre-summer work/: 3D climate model classificattion.py  plot_maps.py  plot_single_coord.py  single_coord_plots.ipynb  utility.py
pre_summer_work/: plot_maps.py  plotting_maps.ipynb  utility.py
prelim code work for OAC/: Generating_nc_files.py  plot maps.py  plot_maps.py  plotting_maps.ipynb  runncdf.py
results/: gen_2000_2050_5.toml  gen_2000s.nc  gen_2000s_metrics.nc  gen_2020s.nc  gen_2020s_metrics.nc  gen_comp_2020_2026_1.toml
results-1940-2100-dist/: gen_1940s.nc
results-1940-2100-dist-w2/: gen_1940s_metrics.nc
results-1940-2100-dist-w3/: gen_1940s.nc
results-1940-2100-dist-w4/: gen_1940s.nc  gen_1940s_metrics.nc
results-1940-2100-dist-w5/: gen_1940s_metrics.nc
results-1940-2100-dist-w6/: dist_w_1940_2100_10_w6.toml  gen_1940s.nc
results-2020-25/: gen_2020_2025_1.toml  gen_2020s.nc  gen_2020s_metrics.nc
results-2020-25-dist/: dist_2020_2026_1.toml
results-2020-25-dist-w/: gen_2020s.nc
results-2020-25_w/: gen_2020s_metrics.nc
tomls/: dist_1940_2100_10.toml  (+5 more)
(+26 files in other folders)
